Removed overflow scroll to avoid elements to go over the limits of screen

--- a/src/css/Panel.css
+++ b/src/css/Panel.css
@@ -33,7 +33,7 @@
 /* Selected Full Screen Image */
 
 .panel.selected {
-  flex: 10;
+  flex: 1;
   background-position: center;
   background-repeat: no-repeat;
 }
